# sensitive-data-deleter

./: .gitignore  CMakeLists.txt  README.md  configmanager.cpp  configmanager.h  configpath.txt  filescanner.cpp  filescanner.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  qml.qrc  sdd_config.json  treeitem.cpp  treeitem.h  treemodel.cpp  treemodel.h  vcpkg.json
.github/workflows/: ci_cd.yml  cmake-build-multiplatform.yml  cmake-multi-platform.yml
SensitiveDataDeleter-deploy/: sdd_config.json
SensitiveDataDeleter-deploy/TestFiles/: Test1.txt
SensitiveDataDeleter-deploy/TestFiles/Subfolder/: Test2.txt
qml/: main_view.qml  mainowndelegate.qml
src/: chunkreader.cpp  chunkreader.h  configmanager.cpp  configmanager.h  filescanner.cpp  filescanner.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
